Add modern macOS app packaging and UI updates